BuildConfig/dockerStrategy/DeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: example-docker-strategy
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    app: example-docker-strategy
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: example-docker-strategy
    spec:
      containers:
      - image: example-docker-strategy:latest
        imagePullPolicy: IfNotPresent
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - container
      from:
        kind: ImageStreamTag
        name: example-docker-strategy:latest
    type: ImageChange
  - type: ConfigChange
