BuildConfig/dockerStrategy/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-docker-strategy
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: example-docker-strategy
  sessionAffinity: None
  type: ClusterIP
