BuildConfig/dockerStrategy/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-docker-strategy
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: example-docker-strategy
    weight: 100
  wildcardPolicy: None
